[package]
name = "webm-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-multipart = "0.6"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
futures-util = "0.3"
tempfile = "3.8"

[[containers]]
class_name = "WebmConverter"
image = "./Dockerfile"
max_instances = 3

[[durable_objects.bindings]]
class_name = "WebmConverter"
name = "WEBM_CONVERTER"
